--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,9 @@
 layout: default
 ---
 
-{% include mathjax.html %}
+<script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
 
 <article class="post">
   <h1>{{ page.title }}</h1>
